--- a/.dvc/config
+++ b/.dvc/config
@@ -1,8 +1,3 @@
-[core]
-    autostage = true
-    remote = origin
 ['remote "origin"']
-    url = s3://emmareysanchez/mlops-practica-icai-mi-proyecto.dvc
-    endpointurl = https://dagshub.com
-    region = us-east-1
-    use_ssl = true
+    url = s3://dvc
+    endpointurl = https://dagshub.com/emmareysanchez/mlops-practica-icai-mi-proyecto.s3
